--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark indigo">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark unique-color">
 
     <!-- Navbar brand -->
     <mdb-navbar-brand><a class="navbar-brand" href="#">Soil Explorer</a></mdb-navbar-brand>
@@ -15,6 +15,6 @@
         <!-- Links -->
     </links>
     <!-- Collapsible content -->
-    
+
 </mdb-navbar>
 <!--/.Navbar-->
