--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -1,20 +1,20 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark unique-color">
+<nav class ="navbar navbar-expand-lg navbar-dark unique-color">
 
     <!-- Navbar brand -->
-    <mdb-navbar-brand><a class="navbar-brand" href="#">Soil Explorer</a></mdb-navbar-brand>
+    <mdb-navbar-brand><a class="navbar-brand" [routerLink] = "['/']">Soil Explorer</a></mdb-navbar-brand>
 
     <!-- Collapsible content -->
     <links>
         <!-- Links -->
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active" [routerLinkActive] = "['active']" [routerLinkActiveOptions] = "{exact:true}"><a class="nav-link waves-light" mdbWavesEffect [routerLink] = "['/']">Home</a></li>
-            <li class="nav-item active" [routerLinkActive] = "['active']" [routerLinkActiveOptions] = "{exact:true}" ><a class="nav-link waves-light" mdbWavesEffect [routerLink] = "['/register']">Register</a></li>
-            <li class="nav-item active" [routerLinkActive] = "['active']" [routerLinkActiveOptions] = "{exact:true}" ><a class="nav-link waves-light" mdbWavesEffect [routerLink] = "['/login']">Login</a></li>
+            <li class="nav-item" [routerLinkActive] = "['active']" [routerLinkActiveOptions] = "{exact:true}"><a class="nav-link waves-light" mdbWavesEffect [routerLink] = "['/']">Home</a></li>
+            <li class="nav-item" [routerLinkActive] = "['active']" [routerLinkActiveOptions] = "{exact:true}" ><a class="nav-link waves-light" mdbWavesEffect [routerLink] = "['/register']">Register</a></li>
+            <li class="nav-item" [routerLinkActive] = "['active']" [routerLinkActiveOptions] = "{exact:true}" ><a class="nav-link waves-light" mdbWavesEffect [routerLink] = "['/login']">Login</a></li>
         </ul>
         <!-- Links -->
     </links>
     <!-- Collapsible content -->
 
-</mdb-navbar>
+</nav>
 <!--/.Navbar-->
