--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container-fluid">
+<div class="container-fluid mt-3">
   <ng-flash-message></ng-flash-message>
   <router-outlet></router-outlet>
 </div>
