--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -2,19 +2,21 @@
 <form (submit)="onRegisterSubmit()">
   <div class="form-group">
     <label>Name</label>
-    <input type="text" [(ngModel)]="name" name="name" class="form-control">
+    <input type="text" [(ngModel)]="name" name="name" class="form-control form-control-lg">
   </div>
   <div class="form-group">
     <label>Username</label>
-    <input type="text" [(ngModel)]="username" name="username" class="form-control">
+    <input type="text" [(ngModel)]="username" name="username" class="form-control form-control-lg">
   </div>
   <div class="form-group">
     <label>Email</label>
-    <input type="text" [(ngModel)]="email" name="email" class="form-control">
+    <input type="text" [(ngModel)]="email" name="email" class="form-control form-control-lg">
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" [(ngModel)]="password" name="password" class="form-control">
+    <input type="password" [(ngModel)]="password" name="password" class="form-control form-control-lg">
   </div>
   <input type="submit" class="btn btn-primary" value="Submit">
 </form>
+
+
