--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -3,5 +3,6 @@
   <ul class="list-group">
     <li class="list-group-item">Username: {{user.username}}</li>
     <li class="list-group-item">Email: {{user.email}}</li>
+    <div id="container"></div>
   </ul>
 </div>
