--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,11 @@
 <h2 class="page-header">Dashboard</h2>
 <p>Welcome to your dashboard</p>
+
+<div>
+    <label>PDF src</label>
+    <input type="text" placeholder="PDF src" [(ngModel)]="pdfSrc">
+</div>
+<pdf-viewer [src]="pdfSrc" 
+            [render-text]="true"
+            style="display: block;"
+></pdf-viewer>
