Sorry for last commits. Was testing SQL queries and didnt realize it was going to github and heroku. This commit is changing the files to local development and I am messing with the outdir files in order to try and get project properly updating again.

--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
 
 <div class="row">
   <div class="col-md-4">
-    <h3>Express Backend</h3>
+    <h3>EXPRESS BACKENDs</h3>
     <p>A rock solid Node.js/Express server using Mongoose to organize models and query the database</p>
   </div>
   <div class="col-md-4">
