--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -2,6 +2,7 @@
 <form (submit)='onLoginSubmit()'>
   <div class="form-group">
     <label>Username</label>
+    <label>nathan</label>
     <input type="text" class="form-control" [(ngModel)]="username" name="username">
   </div>
   <div class="form-group">
