--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -4,6 +4,7 @@
     <label>Username</label>
     <label>nathan</label>
     <input type="text" class="form-control" [(ngModel)]="username" name="username">
+    <input type="text" class="form-control" [(ngModel)]="username" name="username">
   </div>
   <div class="form-group">
     <label>Password</label>
