--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <h2 class="page-header">Dashboard</h2>
-<div>
+<!-- <div>
     <label>PDF src</label>
     <input type="text" placeholder="PDF src" [(ngModel)]="pdfSrc">
-</div>
+</div> -->
 <pdf-viewer [src]="pdfSrc" 
             [render-text]="true"
             style="display: block;"
-></pdf-viewer>
+></pdf-viewer> 
