--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,9 +1,18 @@
 <h2 class="page-header">Dashboard</h2>
-<!-- <div>
-    <label>PDF src</label>
-    <input type="text" placeholder="PDF src" [(ngModel)]="pdfSrc">
-</div> -->
-<pdf-viewer [src]="pdfSrc" 
-            [render-text]="true"
-            style="display: block;"
-></pdf-viewer> 
+<select class="browser-default custom-select" [(ngModel)]="pdfSrc">
+    <option *ngFor="let key of pdfItems" aria-placeholder="Select a Pdf" [value]="key.value">{{ key.label }}</option>
+</select>
+<p></p>
+<div *ngIf="isLoaded" style="text-align: center;">
+    <button class="btn btn-primary" (click)="prevPage()" [disabled]="page === 1">Prev</button>
+    <button class="btn btn-primary" (click)="nextPage()" [disabled]="page === totalPages">Next</button>
+</div>
+<div *ngIf="isLoaded" style="text-align: center;">
+    <span>{{ page }} / {{ totalPages }}</span>
+</div>
+  
+<pdf-viewer [src]="pdfSrc"
+            [show-all]="false"
+            [page]="page"
+            (after-load-complete)="afterLoadComplete($event)"
+></pdf-viewer>
