created new table component and service to display query

--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -5,3 +5,8 @@
     <li class="list-group-item">Email: {{user.email}}</li>
   </ul>
 </div>
+
+<div class="app-component">
+    <h1 class="text-center">Soil Taxonomy in Lassen National Park</h1>
+    <app-table></app-table>
+</div>
