--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -7,6 +7,11 @@
 </div>
 
 <div class="app-component">
-    <h1 class="text-center">Soil Taxonomy in Lassen National Park</h1>
+    <h1 class="text-center">Lassen National Park Map Unit information</h1>
     <app-table></app-table>
+</div>
+
+<div class="app-component">
+    <h1 class="text-center">Soil Taxonomy in Lassen National Park</h1>
+    <app-table1></app-table1>
 </div>
