added third query and table.

--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -15,3 +15,8 @@
     <h1 class="text-center">Soil Taxonomy in Lassen National Park</h1>
     <app-table1></app-table1>
 </div>
+
+<div class="app-component">
+    <h1 class="text-center">Ecological Site by Area Symbol</h1>
+    <app-table2></app-table2>
+</div>
