Changed navbar.Added table design and navigation buttons on page for fri

--- a/angular-src/src/app/components/table1/table1.component.html
+++ b/angular-src/src/app/components/table1/table1.component.html
@@ -1,4 +1,4 @@
-<table mdbTable class="z-depth-1" striped="true" hover="true" >
+<table mdbTable class="table table-striped table-dark" hover="true" >
     <thead>
     <tr>
       <th *ngFor="let col of columns" scope="col">
