Home page pictures

--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,22 +1,81 @@
-<div class="jumbotron text-center">
-  <h1>Soil Explorer App</h1>
-  <p class="lead">Welcome to our Soil Explorer Application!</p>
-  <div>
-    <a class="btn btn-primary" [routerLink]="['/register']">Register</a><a class="btn btn-primary" [routerLink]="['/login']">Login</a>
-  </div>
-</div>
 
-<div class="row">
-  <div class="col-md-4">
-    <h3>Express Backend</h3>
-    <p>A rock solid Node.js/Express server using Mongoose to organize models and query the database</p>
+    <!-- Grid row -->
+    <div class="row">
+  
+        <!-- Grid column -->
+        <div class="col-md-6 mb-3">
+      
+          <img src="../../assets/789207_4.jpg" class="img-fluid z-depth-1"
+            alt="Responsive image">
+      
+        </div>
+        <!-- Grid column -->
+      
+        <!-- Grid column -->
+        <div class="col-md-6 mb-3">
+      
+          <img src="../../assets/LAVO_IFR_field_crew_edited.jpg" class="img-fluid z-depth-1"
+            alt="Responsive image">
+      
+        </div>
+        <!-- Grid column -->
+      
+      </div>
+      <!-- Grid row -->
+  
+  <!-- Grid row -->
+  <div class="row">
+  
+    <!-- Grid column -->
+    <div class="col-lg-4 col-md-12 mb-3">
+  
+      <img src="../../assets/789212_1.jpg" class="img-fluid z-depth-1"
+        alt="Responsive image">
+  
+    </div>
+    <!-- Grid column -->
+  
+    <!-- Grid column -->
+    <div class="col-lg-4 col-md-6 mb-3">
+  
+      <img src="../../assets/789212_3.jpg" class="img-fluid z-depth-1"
+        alt="Responsive image">
+  
+    </div>
+    <!-- Grid column -->
+  
+    <!-- Grid column -->
+    <div class="col-lg-4 col-md-6 mb-3">
+  
+      <img src="../../assets/IMG_0392.jpg" class="img-fluid z-depth-1"
+        alt="Responsive image">
+  
+    </div>
+    <!-- Grid column -->
+  
   </div>
-  <div class="col-md-4">
-    <h3>Angular-CLI</h3>
-    <p>Angular-CLI to generate components, services and more. Local dev server and easy compilation</p>
+  <!-- Grid row -->
+  
+  <!-- Grid row -->
+  <div class="row">
+  
+    <!-- Grid column -->
+    <div class="col-md-6 mb-3">
+  
+      <img src="../../assets/IMG_0409.jpg" class="img-fluid z-depth-1"
+        alt="Responsive image">
+  
+    </div>
+    <!-- Grid column -->
+  
+    <!-- Grid column -->
+    <div class="col-md-6 mb-3">
+  
+      <img src="../../assets/IMG_2914.jpg" class="img-fluid z-depth-1"
+        alt="Responsive image">
+  
+    </div>
+    <!-- Grid column -->
+  
   </div>
-  <div class="col-md-4">
-    <h3>JWT Tokens</h3>
-    <p>Full featured authentication using JSON web tokens. Login and store user data</p>
-  </div>
-</div>
+  <!-- Grid row -->
