--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<nav class ="navbar navbar-expand-lg navbar-dark unique-color">
+<nav class ="navbar sticky-top navbar-expand-lg navbar-dark unique-color">
 
     <!-- Navbar brand -->
     <mdb-navbar-brand><a class="navbar-brand" [routerLink] = "['/']">Soil Explorer</a></mdb-navbar-brand>
