--- a/angular-src/src/app/components/table/table.component.html
+++ b/angular-src/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<table mdbTable class="table table-responsive table-striped table-dark w-auto" hover="true" >
+<table mdbTable class="table table-responsive table-striped table-dark" hover="true" >
   <thead>
   <tr>
     <th *ngFor="let col of columns" scope="col">
