--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,7 @@
             <li *ngIf="authService.loggedIn()" class="nav-item" [routerLinkActive] = "['active']" [routerLinkActiveOptions] = "{exact:true}" ><a class="nav-link waves-light" mdbWavesEffect [routerLink] = "['/profile']">Queries</a></li>
             <li *ngIf="authService.loggedIn()" class="nav-item" [routerLinkActive] = "['active']" [routerLinkActiveOptions] = "{exact:true}" ><a class="nav-link waves-light" mdbWavesEffect [routerLink] = "['/dashboard']">Dashboard</a></li>
             <li *ngIf="!authService.loggedIn()" class="nav-item" [routerLinkActive] = "['active']" [routerLinkActiveOptions] = "{exact:true}" ><a class="nav-link waves-light" mdbWavesEffect [routerLink] = "['/login']">Login</a></li>
+            <li *ngIf="!authService.loggedIn()" class="nav-item" [routerLinkActive] = "['active']" [routerLinkActiveOptions] = "{exact:true}" ><a class="nav-link waves-light" mdbWavesEffect [routerLink] = "['/techdetails']">Technical Details</a></li>
             <li *ngIf="!authService.loggedIn()" class="nav-item" [routerLinkActive] = "['active']" [routerLinkActiveOptions] = "{exact:true}" ><a class="nav-link waves-light" mdbWavesEffect [routerLink] = "['/register']">Register</a></li>
             <li *ngIf="authService.loggedIn()" class="nav-item"><a class="nav-link waves-light" mdbWavesEffect (click)="onLogoutClick()" href="#">Logout</a></li>
         </ul>
